--- a/resources/style.css
+++ b/resources/style.css
@@ -1,19 +1,39 @@
-section{
+.title{
   display: flex;
-  margin-left: 20px;
-  margin-right: 45px;  
+  margin-right: 45px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid black;
 }
 
-h1{
+.company,
+  .navigation{
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
   padding: 10px;
 }
 
-
+.header{
+  display: flex;
+  margin-right: auto;
+  border: 1px solid black;
+  padding-right: 800px;
+  padding-left: 20px;
+}
 
 .company{
   color: MediumAquamarine;
-  margin-right: auto;
+}
+
+.content{
+  padding-top: 20px;
+  display: inline-flex;
+}
+
+.column.large{
+  width: 630px;
+}
+
+.column.medium{
+  width: 300px;
 }
