--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,5 @@
 .title{
   display: flex;
-  margin-right: 45px;
   padding-bottom: 10px;
   border-bottom: 1px solid black;
   background-color: white;
@@ -14,10 +13,13 @@
   padding: 10px;
 }
 
+.navigation.last{
+  margin-right: 45px;
+}
+
 .header{
   display: flex;
   margin-right: auto;
-  border: 1px solid black;
   padding-right: 800px;
   padding-left: 20px;
 }
@@ -29,33 +31,27 @@
 .content{
   display: flex;
   justify-content: space-around;
-  border: 1px solid black;
   padding-top: 50px;
+}
+
+.column{
+  display: flex;
+  flex-direction: column;
 }
 
 .column.large{
   width: 630px;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
 }
 
 .column.medium{
   width: 300px;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
 }
 
 .column.small{
   width: 240px;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
 }
 
 .article{
-  border: 1px solid black;
   font-family: Georgia;
   font-size: 17px;
   color: black;
@@ -64,26 +60,25 @@
 .article.main-story{
   background-image: url("https://raw.githubusercontent.com/AJ-2018/MyTimes/master/resources/images/main-story.png");
   height: 300px;
-  display: flex;
 }
 
 
 .article.cats{
   background-image: url("https://raw.githubusercontent.com/AJ-2018/MyTimes/master/resources/images/cat.png");
   height: 300px;
-  display: flex;
+
 }
 
 .article.earth{
   background-image: url("https://raw.githubusercontent.com/AJ-2018/MyTimes/master/resources/images/fall.png");
   height: 300px;
-  display: flex;
+  width: 300px;
 }
 
 .article.cameras{
   background-image: url("https://raw.githubusercontent.com/AJ-2018/MyTimes/master/resources/images/cameraman.png");
   height: 300px;
-  display: flex;
+  width: 300px;
 
 }
 
@@ -93,7 +88,6 @@
   color: white;
   margin-top: 0;
   text-align: center;
-
 }
 
 .article-maintitle{
@@ -101,4 +95,40 @@
   font-size: 40px;
   color: white;
   margin-top: 0;
+}
+
+.stories{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.story{
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+}
+
+.text-content{
+  height: 250px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.bites{
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.nb{
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  padding: 18px 20px;
+  margin: 0;
+  border-bottom: 1px solid black;
 }
